--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -72,18 +72,17 @@
 \vfill
 
 \addcontentsline{toc}{section}{Abstract}
+\begin{center}
 \begin{abstract}              
 
-Quantum annealing is an adiabatic quantum computing technique that has the potential to solve optimisation problems much faster than classical algorithms. This study proposes the novel application of quantum annealing to music arrangement---the adaptation of previously-written compositions---by framing arrangement as an optimisation problem. The original framework is applied to two scores: Quartet No.\ 1 in B-flat major, Op.\ 1, by
-Joseph Haydn, and Symphony No.\ 5 in C minor, Op.\ 67,
-I.\ Allegro con brio, by Ludwig van Beethoven. It is shown that a quantum annealer successfully produces arrangements in fulfilment of the imposed constraints, and, whilst often performing on par with classical algorithms, displays an optimisation and time advantage at some problem sizes.
+Quantum annealing is an adiabatic quantum computing technique that has the potential to solve optimisation problems much faster than classical algorithms. This study proposes the novel application of quantum annealing to music arrangement---the adaptation of previously-written compositions---by framing arrangement as an optimisation problem. A musical score is transformed into a graph of vertices and edges, which can then be solved as a graph colouring problem by a quantum computer. The original framework is applied to two scores: Quartet No.\ 1 in B-flat major, Op.\ 1, by Joseph Haydn, and Symphony No.\ 5 in C minor, Op.\ 67, I.\ Allegro con brio, by Ludwig van Beethoven. It is shown that a quantum annealer successfully produces arrangements meeting the imposed conditions. Whilst often performing on par with classical algorithms, the quantum method displays optimisation and time advantages at some problem sizes.
 
 \end{abstract}
 
 \vfill
 
-\begin{center}
-    \includesvg{durham-university.svg}
+\includesvg{durham-university.svg}
+
 \end{center}
 
 \thispagestyle{empty}
