--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,3 +1,14 @@
+@article{au-yeung_np-hard_2023,
+	title = {{NP}-hard but no longer hard to solve? {Using} quantum computing to tackle optimization problems},
+	volume = {2},
+	issn = {2813-2181},
+	doi = {10.3389/frqst.2023.1128576},
+	journal = {Frontiers in Quantum Science and Technology},
+	author = {Au-Yeung, Rhonda and Chancellor, Nicholas and Halffmann, Pascal},
+	month = feb,
+	year = {2023},
+}
+
 @report{dwave_zephyr,
 	title = {{Zephyr} {Topology} of {D-Wave} {Quantum} {Processors}},
 	type = {D-Wave Technical Report Series},
