--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -280,14 +280,16 @@
 	eprintclass = {quant-ph},
 }
 
-@inproceedings{wiggins_composition_1999,
-	title = {{AI} methods for algorithmic composition: A survey, a critical view and future prospects},
-	author = {G. Papadopoulos and Wiggins, {G. A.}},
-	year = {1999},
-	pages = {110--117},
-	booktitle = {Proceedings of the AISB'99 Symposium on Musical Creativity},
-	publisher = {AISB},
+@online{fernandez_ai_2014,
+	title = {{AI} {Methods} in {Algorithmic} {Composition}: {A} {Comprehensive} {Survey}},
+	doi = {10.48550/arXiv.1402.0585},
+	author = {Fernandez, Jose David and Vico, Francisco},
+	year = {2014},
+	eprinttype = {arXiv},
+	eprint = {1402.0585},
+	eprintclass = {cs.AI},
 }
+
 
 @book{hiller_experimental_1959,
 	title = {{Experimental} {Music}: {Composition} {With} an {Electronic} {Computer}},
@@ -539,6 +541,7 @@
 	journal = {International Computer Music Association},
 	author = {Cambouropoulos, Emilios},
 	year = {2011},
+	url = {http://hdl.handle.net/2027/spo.bbp2372.2001.021},
 }
 
 @online{moses_computational_2016,
@@ -549,7 +552,7 @@
 	year = {2016},
 	eprinttype = {arXiv},
 	eprint = {1607.04220},
-	eprintclass = {quant-ph},
+	eprintclass = {cs.CC},
 }
 
 @article{johnson_quantum_2011,
